--- a/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -190,7 +190,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/FirstPerson/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Materials
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -204,7 +204,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
@@ -1059,6 +1059,12 @@ FbxExportOption.Mesh=True
 FbxExportOption.StaticMesh=True
 FbxExportOption.SkeletalMesh=True
 FbxExportOption.Animation=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1074,21 +1080,22 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
-MRUItem2=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonProjectile
-MRUItem3=/Game/StarterContent/Audio/Explosion01
-MRUItem4=/Game/StarterContent/Props/SM_Door
-MRUItem5=/Game/StarterContent/Props/SM_DoorFrame
-MRUItem6=/Game/Blueprints/Doors/bp_door_parents
-MRUItem7=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonCharacter
-MRUItem8=/Game/Blueprints/Doors/bpc_door_interface
-MRUItem9=/Game/Blueprints/FirstPersonTemplate/BPI_Interaction
-MRUItem10=/Game/Blueprints/Doors/bpc_door_interact
-MRUItem11=/Game/Blueprints/Doors/BP+Pressureplate
-MRUItem12=/Game/Blueprints/Doors/door_child
-MRUItem13=/Game/NewWidgetBlueprint
-MRUItem14=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem0=/Game/Materials/_d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078
+MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
+MRUItem3=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonProjectile
+MRUItem4=/Game/StarterContent/Audio/Explosion01
+MRUItem5=/Game/StarterContent/Props/SM_Door
+MRUItem6=/Game/StarterContent/Props/SM_DoorFrame
+MRUItem7=/Game/Blueprints/Doors/bp_door_parents
+MRUItem8=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonCharacter
+MRUItem9=/Game/Blueprints/Doors/bpc_door_interface
+MRUItem10=/Game/Blueprints/FirstPersonTemplate/BPI_Interaction
+MRUItem11=/Game/Blueprints/Doors/bpc_door_interact
+MRUItem12=/Game/Blueprints/Doors/BP+Pressureplate
+MRUItem13=/Game/Blueprints/Doors/door_child
+MRUItem14=/Game/NewWidgetBlueprint
+MRUItem15=/Engine/EditorBlueprintResources/StandardMacros
 
 [DetailCategoriesAdvanced]
 SkeletalMeshComponent.Rendering=False
@@ -1133,7 +1140,7 @@ Volume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationMidtones\" \"
 Brush="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationMidtones\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessComponent=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
-StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
+StreamableRenderAsset=
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
@@ -1151,6 +1158,7 @@ StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.Box
 /Game/Blueprints/FirstPersonTemplate/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
 /Game/Blueprints/FirstPersonTemplate/BP_FirstPersonProjectile.BP_FirstPersonProjectile=0
 /Game/FirstPerson/Blueprints/BP_FirstPersonProjectile.BP_FirstPersonProjectile=0
+/Game/Materials/_d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078._d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1198,6 +1206,9 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/_d_3685hi_h_b1gUd018svckhryht8ztkkg_rtc078._d_3685hi_h_b1gUd018svckhryht8ztkkg_rtc078;
+RecentlyPlaced=/Game/Materials/_d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078._d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078;
+RecentlyPlaced=/Game/Materials/_d_36855j_h_g1gUd018svc1fr8i6omieing_rtc078._d_36855j_h_g1gUd018svc1fr8i6omieing_rtc078;
 RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_CeilingLight;
 RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_Effect_Explosion.Blueprint_Effect_Explosion;
 RecentlyPlaced=/Game/StarterContent/Audio/Explosion02.Explosion02;
@@ -2395,11 +2406,11 @@ K2Node_VariableGet=PostProcessComponent.PostProcessVolume.Color Grading,PostProc
 BP_FirstPersonCharacter_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 K2Node_VariableSet=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
-BrushComponent=
+BrushComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 bp_door_parents_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 BP+Pressureplate_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 SceneComponent=PostProcessComponent.PostProcessVolume.Color Grading
-StaticMeshActor=PostProcessComponent.PostProcessVolume.Color Grading
+StaticMeshActor=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 bpc_door_interact_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 SkeletalMeshComponent=
 Emitter=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
