--- a/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -190,7 +190,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Materials
+ContentBrowserDrawer.SelectedPaths=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -205,6 +205,7 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
@@ -1065,6 +1066,46 @@ Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
 Texture2D.Compositing=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Rendering=True
+TextRenderActor.Lighting=True
+TextRenderActor.HLOD=True
+TextRenderActor.PathTracing=True
+TextRenderActor.Navigation=True
+TextRenderActor.Tags=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Physics=True
+TextRenderActor.Networking=True
+TextRenderActor.WorldPartition=True
+TextRenderActor.Input=True
+TextRenderActor.Actor=True
+BP_SimpleWaterVolume_C.TransformCommon=True
+BP_SimpleWaterVolume_C.Properties=True
+BP_SimpleWaterVolume_C.Rendering=True
+BP_SimpleWaterVolume_C.Replication=True
+BP_SimpleWaterVolume_C.Collision=True
+BP_SimpleWaterVolume_C.HLOD=True
+BP_SimpleWaterVolume_C.Physics=True
+BP_SimpleWaterVolume_C.Networking=True
+BP_SimpleWaterVolume_C.WorldPartition=True
+BP_SimpleWaterVolume_C.Input=True
+BP_SimpleWaterVolume_C.Actor=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.AtmosphereAndCloud=True
+SkyLight.Visualization=True
+SkyLight.RayTracing=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Physics=True
+SkyLight.Networking=True
+SkyLight.Actor=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1080,22 +1121,23 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/_d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
-MRUItem3=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonProjectile
-MRUItem4=/Game/StarterContent/Audio/Explosion01
-MRUItem5=/Game/StarterContent/Props/SM_Door
-MRUItem6=/Game/StarterContent/Props/SM_DoorFrame
-MRUItem7=/Game/Blueprints/Doors/bp_door_parents
-MRUItem8=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonCharacter
-MRUItem9=/Game/Blueprints/Doors/bpc_door_interface
-MRUItem10=/Game/Blueprints/FirstPersonTemplate/BPI_Interaction
-MRUItem11=/Game/Blueprints/Doors/bpc_door_interact
-MRUItem12=/Game/Blueprints/Doors/BP+Pressureplate
-MRUItem13=/Game/Blueprints/Doors/door_child
-MRUItem14=/Game/NewWidgetBlueprint
-MRUItem15=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem0=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem1=/Game/Materials/_d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078
+MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
+MRUItem4=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonProjectile
+MRUItem5=/Game/StarterContent/Audio/Explosion01
+MRUItem6=/Game/StarterContent/Props/SM_Door
+MRUItem7=/Game/StarterContent/Props/SM_DoorFrame
+MRUItem8=/Game/Blueprints/Doors/bp_door_parents
+MRUItem9=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonCharacter
+MRUItem10=/Game/Blueprints/Doors/bpc_door_interface
+MRUItem11=/Game/Blueprints/FirstPersonTemplate/BPI_Interaction
+MRUItem12=/Game/Blueprints/Doors/bpc_door_interact
+MRUItem13=/Game/Blueprints/Doors/BP+Pressureplate
+MRUItem14=/Game/Blueprints/Doors/door_child
+MRUItem15=/Game/NewWidgetBlueprint
+MRUItem16=/Engine/EditorBlueprintResources/StandardMacros
 
 [DetailCategoriesAdvanced]
 SkeletalMeshComponent.Rendering=False
@@ -1206,19 +1248,26 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_BananaTree_02.SM_BananaTree_02;
+RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/GroundIvy/SM_GroundIvy_01.SM_GroundIvy_01;
+RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Grass/SM_Grass_Generic.SM_Grass_Generic;
+RecentlyPlaced=/Game/StarterContent/Textures/T_CobbleStone_Pebble_D.T_CobbleStone_Pebble_D;
+RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/StylizedWaterComponent/BP_SimpleWaterVolume.BP_SimpleWaterVolume;
+RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Meshes/Stones/SM_Stone_B_02.SM_Stone_B_02;
+RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Meshes/Rocks/SM_Rock_02.SM_Rock_02;
+RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Plants/SM_Plant_Taro_02.SM_Plant_Taro_02;
+RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Palm_B_04.SM_Palm_B_04;
+RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Palm_A_02.SM_Palm_A_02;
+RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Palm_A_03.SM_Palm_A_03;
+RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Tree_Large_01.SM_Tree_Large_01;
+RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Tree_Medium_02.SM_Tree_Medium_02;
+RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_BananaTree_03.SM_BananaTree_03;
+RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Bushes/SM_Bush_Medium_01.SM_Bush_Medium_01;
+RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Flowers/SM_FlowerClump_B_01.SM_FlowerClump_B_01;
 RecentlyPlaced=/Game/Materials/_d_3685hi_h_b1gUd018svckhryht8ztkkg_rtc078._d_3685hi_h_b1gUd018svckhryht8ztkkg_rtc078;
 RecentlyPlaced=/Game/Materials/_d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078._d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078;
 RecentlyPlaced=/Game/Materials/_d_36855j_h_g1gUd018svc1fr8i6omieing_rtc078._d_36855j_h_g1gUd018svc1fr8i6omieing_rtc078;
-RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_CeilingLight;
-RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_Effect_Explosion.Blueprint_Effect_Explosion;
-RecentlyPlaced=/Game/StarterContent/Audio/Explosion02.Explosion02;
-RecentlyPlaced=/Game/StarterContent/Audio/Explosion01.Explosion01;
-RecentlyPlaced=/Game/StarterContent/Particles/P_Sparks.P_Sparks;
-RecentlyPlaced=/Game/Blueprints/Doors/bpc_door_interact.bpc_door_interact;
-RecentlyPlaced=/Game/Blueprints/Doors/BPC_Door_Overlap.BPC_Door_Overlap;
-RecentlyPlaced=/Game/Blueprints/Doors/bp_door_parents.bp_door_parents;
-RecentlyPlaced=/Game/Blueprints/Doors/BP+Pressureplate.BP+Pressureplate;
-RecentlyPlaced=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter;
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2409,14 +2458,15 @@ PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
 BrushComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 bp_door_parents_C=PostProcessComponent.PostProcessVolume.Color Grading
 BP+Pressureplate_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
-SceneComponent=
+SceneComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 StaticMeshActor=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
-bpc_door_interact_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
+bpc_door_interact_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 SkeletalMeshComponent=
 Emitter=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 Blueprint_CeilingLight_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 ParticleSystemComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
-BPC_Door_Overlap_C=PostProcessComponent.PostProcessVolume.Color Grading
+BPC_Door_Overlap_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
+BP_SimpleWaterVolume_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
