--- a/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -190,7 +190,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees
+ContentBrowserDrawer.SelectedPaths=/Game/LUSH_StylizedEnvironmentSet/Foliage/Flowers
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1125,6 +1125,11 @@ MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=True
 MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+MaterialExpressionParameter.General=True
+MaterialExpressionParameter.MaterialExpression=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1140,23 +1145,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem1=/Game/Materials/_d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078
-MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
-MRUItem4=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonProjectile
-MRUItem5=/Game/StarterContent/Audio/Explosion01
-MRUItem6=/Game/StarterContent/Props/SM_Door
-MRUItem7=/Game/StarterContent/Props/SM_DoorFrame
-MRUItem8=/Game/Blueprints/Doors/bp_door_parents
-MRUItem9=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonCharacter
-MRUItem10=/Game/Blueprints/Doors/bpc_door_interface
-MRUItem11=/Game/Blueprints/FirstPersonTemplate/BPI_Interaction
-MRUItem12=/Game/Blueprints/Doors/bpc_door_interact
-MRUItem13=/Game/Blueprints/Doors/BP+Pressureplate
-MRUItem14=/Game/Blueprints/Doors/door_child
-MRUItem15=/Game/NewWidgetBlueprint
-MRUItem16=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem0=/Game/LUSH_StylizedEnvironmentSet/_SharedAssets/T_Leaves_01
+MRUItem1=/Game/LevelPrototyping/Materials/M_PrototypeGrid
+MRUItem2=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
+MRUItem3=/Game/LevelPrototyping/Materials/M_Solid
+MRUItem4=/Game/LevelPrototyping/Materials/MI_Solid_Blue
+MRUItem5=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem6=/Game/Materials/_d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078
+MRUItem7=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem8=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
+MRUItem9=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonProjectile
+MRUItem10=/Game/StarterContent/Audio/Explosion01
+MRUItem11=/Game/StarterContent/Props/SM_Door
+MRUItem12=/Game/StarterContent/Props/SM_DoorFrame
+MRUItem13=/Game/Blueprints/Doors/bp_door_parents
+MRUItem14=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonCharacter
+MRUItem15=/Game/Blueprints/Doors/bpc_door_interface
+MRUItem16=/Game/Blueprints/FirstPersonTemplate/BPI_Interaction
+MRUItem17=/Game/Blueprints/Doors/bpc_door_interact
+MRUItem18=/Game/Blueprints/Doors/BP+Pressureplate
+MRUItem19=/Game/Blueprints/Doors/door_child
 
 [DetailCategoriesAdvanced]
 SkeletalMeshComponent.Rendering=False
@@ -1221,6 +1229,11 @@ StreamableRenderAsset=
 /Game/FirstPerson/Blueprints/BP_FirstPersonProjectile.BP_FirstPersonProjectile=0
 /Game/Materials/_d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078._d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078=1
 /Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=1
+/Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
+/Game/LevelPrototyping/Materials/M_Solid.M_Solid=1
+/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark.MI_PrototypeGrid_TopDark=1
+/Game/LevelPrototyping/Materials/M_PrototypeGrid.M_PrototypeGrid=1
+/Game/LUSH_StylizedEnvironmentSet/_SharedAssets/T_Leaves_01.T_Leaves_01=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1268,6 +1281,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Tree_Medium_01.SM_Tree_Medium_01;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_BananaTree_02.SM_BananaTree_02;
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/GroundIvy/SM_GroundIvy_01.SM_GroundIvy_01;
@@ -1287,7 +1301,6 @@ RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Bushes/SM_Bush_Medium_0
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Flowers/SM_FlowerClump_B_01.SM_FlowerClump_B_01;
 RecentlyPlaced=/Game/Materials/_d_3685hi_h_b1gUd018svckhryht8ztkkg_rtc078._d_3685hi_h_b1gUd018svckhryht8ztkkg_rtc078;
 RecentlyPlaced=/Game/Materials/_d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078._d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078;
-RecentlyPlaced=/Game/Materials/_d_36855j_h_g1gUd018svc1fr8i6omieing_rtc078._d_36855j_h_g1gUd018svc1fr8i6omieing_rtc078;
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2487,6 +2500,8 @@ Blueprint_CeilingLight_C=PostProcessComponent.PostProcessVolume.Color Grading,Po
 ParticleSystemComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 BPC_Door_Overlap_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 BP_SimpleWaterVolume_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Grid Properties
+MaterialInstanceConstant=
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2762,4 +2777,9 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
 
