--- a/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -190,7 +190,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/LUSH_StylizedEnvironmentSet/Foliage/Flowers
+ContentBrowserDrawer.SelectedPaths=/Game/AnimalVarietyPack/Fox/Animations
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -205,6 +205,8 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Health.Health
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
@@ -1130,6 +1132,43 @@ MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
 MaterialExpressionParameter.General=True
 MaterialExpressionParameter.MaterialExpression=True
+SkeletalMeshActor.TransformCommon=True
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
+SkeletalMeshActor.Materials=True
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.Clothing=True
+SkeletalMeshActor.Collision=True
+SkeletalMeshActor.Lighting=True
+SkeletalMeshActor.LeaderPoseComponent=True
+SkeletalMeshActor.AnimationRig=True
+SkeletalMeshActor.Deformer=True
+SkeletalMeshActor.SkinWeights=True
+SkeletalMeshActor.Rendering=True
+SkeletalMeshActor.HLOD=True
+SkeletalMeshActor.PathTracing=True
+SkeletalMeshActor.Navigation=True
+SkeletalMeshActor.VirtualTexture=True
+SkeletalMeshActor.Tags=True
+SkeletalMeshActor.Activation=True
+SkeletalMeshActor.Cooking=True
+SkeletalMeshActor.Replication=True
+SkeletalMeshActor.Networking=True
+SkeletalMeshActor.WorldPartition=True
+SkeletalMeshActor.Input=True
+SkeletalMeshActor.Actor=True
+Health_C.Appearance=True
+Health_C.Input=True
+Health_C.Interaction=True
+Health_C.Designer=True
+Health_C.Performance=True
+Health_C.Layout=True
+Health_C.Behavior=True
+Health_C.Render Transform=True
+Health_C.Localization=True
+Health_C.Accessibility=True
+Health_C.Clipping=True
+Health_C.Navigation=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1145,26 +1184,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LUSH_StylizedEnvironmentSet/_SharedAssets/T_Leaves_01
-MRUItem1=/Game/LevelPrototyping/Materials/M_PrototypeGrid
-MRUItem2=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
-MRUItem3=/Game/LevelPrototyping/Materials/M_Solid
-MRUItem4=/Game/LevelPrototyping/Materials/MI_Solid_Blue
-MRUItem5=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem6=/Game/Materials/_d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078
-MRUItem7=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem8=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
-MRUItem9=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonProjectile
-MRUItem10=/Game/StarterContent/Audio/Explosion01
-MRUItem11=/Game/StarterContent/Props/SM_Door
-MRUItem12=/Game/StarterContent/Props/SM_DoorFrame
-MRUItem13=/Game/Blueprints/Doors/bp_door_parents
-MRUItem14=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonCharacter
-MRUItem15=/Game/Blueprints/Doors/bpc_door_interface
-MRUItem16=/Game/Blueprints/FirstPersonTemplate/BPI_Interaction
-MRUItem17=/Game/Blueprints/Doors/bpc_door_interact
-MRUItem18=/Game/Blueprints/Doors/BP+Pressureplate
-MRUItem19=/Game/Blueprints/Doors/door_child
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/Health
+MRUItem2=/Game/LUSH_StylizedEnvironmentSet/_SharedAssets/T_Leaves_01
+MRUItem3=/Game/LevelPrototyping/Materials/M_PrototypeGrid
+MRUItem4=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
+MRUItem5=/Game/LevelPrototyping/Materials/M_Solid
+MRUItem6=/Game/LevelPrototyping/Materials/MI_Solid_Blue
+MRUItem7=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem8=/Game/Materials/_d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078
+MRUItem9=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
+MRUItem10=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonProjectile
+MRUItem11=/Game/StarterContent/Audio/Explosion01
+MRUItem12=/Game/StarterContent/Props/SM_Door
+MRUItem13=/Game/StarterContent/Props/SM_DoorFrame
+MRUItem14=/Game/Blueprints/Doors/bp_door_parents
+MRUItem15=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonCharacter
+MRUItem16=/Game/Blueprints/Doors/bpc_door_interface
+MRUItem17=/Game/Blueprints/FirstPersonTemplate/BPI_Interaction
+MRUItem18=/Game/Blueprints/Doors/bpc_door_interact
+MRUItem19=/Game/Blueprints/Doors/BP+Pressureplate
 
 [DetailCategoriesAdvanced]
 SkeletalMeshComponent.Rendering=False
@@ -1202,7 +1241,7 @@ CanvasPanel="\"Object.Render Transform.RenderTransformPivot\" "
 PanelWidget="\"Object.Render Transform.RenderTransformPivot\" "
 HorizontalBox="\"Object.Render Transform.RenderTransformPivot\" "
 NewWidgetBlueprint_C=
-UserWidget=
+UserWidget="\"Object.Render Transform.RenderTransformPivot\" "
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" \"Object.Render Transform.RenderTransformPivot\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationMidtones\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationMidtones\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1210,6 +1249,7 @@ Brush="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationMidtones\" \"O
 PostProcessComponent=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
 StreamableRenderAsset=
+Health_C="\"Object.Render Transform.RenderTransformPivot\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
@@ -1281,6 +1321,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/AnimalVarietyPack/Fox/Animations/ANIM_Fox_GoToRest.ANIM_Fox_GoToRest;
+RecentlyPlaced=/Game/AnimalVarietyPack/Fox/Animations/ANIM_Fox_GetHitLeft.ANIM_Fox_GetHitLeft;
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Tree_Medium_01.SM_Tree_Medium_01;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_BananaTree_02.SM_BananaTree_02;
@@ -1299,8 +1341,6 @@ RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Tree_Medium_02
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_BananaTree_03.SM_BananaTree_03;
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Bushes/SM_Bush_Medium_01.SM_Bush_Medium_01;
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Flowers/SM_FlowerClump_B_01.SM_FlowerClump_B_01;
-RecentlyPlaced=/Game/Materials/_d_3685hi_h_b1gUd018svckhryht8ztkkg_rtc078._d_3685hi_h_b1gUd018svckhryht8ztkkg_rtc078;
-RecentlyPlaced=/Game/Materials/_d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078._d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078;
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2485,7 +2525,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Crouching,InputSettings.Bindings.ActionMappings.interact
 PostProcessComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 K2Node_VariableGet=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
-BP_FirstPersonCharacter_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
+BP_FirstPersonCharacter_C=PostProcessComponent.PostProcessVolume.Color Grading
 K2Node_VariableSet=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
 BrushComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
@@ -2494,7 +2534,7 @@ BP+Pressureplate_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProc
 SceneComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 StaticMeshActor=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 bpc_door_interact_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
-SkeletalMeshComponent=
+SkeletalMeshComponent=PostProcessComponent.PostProcessVolume.Color Grading
 Emitter=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 Blueprint_CeilingLight_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 ParticleSystemComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
@@ -2502,6 +2542,8 @@ BPC_Door_Overlap_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProc
 BP_SimpleWaterVolume_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Grid Properties
 MaterialInstanceConstant=
+CapsuleComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
+EdGraphNode_Comment=PostProcessComponent.PostProcessVolume.Color Grading
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
