health bar fixing.

--- a/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2544,6 +2544,7 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Su
 MaterialInstanceConstant=
 CapsuleComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 EdGraphNode_Comment=PostProcessComponent.PostProcessVolume.Color Grading
+PropertyWrapper=PostProcessComponent.PostProcessVolume.Color Grading
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
