animal friends updated

--- a/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -190,7 +190,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/AnimalVarietyPack/Fox/Animations
+ContentBrowserDrawer.SelectedPaths=/Game/AnimalVarietyPack/Crow/Animations
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1321,6 +1321,12 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/AnimalVarietyPack/Crow/Animations/ANIM_Crow_Fly.ANIM_Crow_Fly;
+RecentlyPlaced=/Game/AnimalVarietyPack/Crow/Animations/ANIM_Crow_Falling.ANIM_Crow_Falling;
+RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerDoe_GoToRest.ANIM_DeerDoe_GoToRest;
+RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerDoe_GetHit.ANIM_DeerDoe_GetHit;
+RecentlyPlaced=/Game/AnimalVarietyPack/Pig/Animations/ANIM_Pig_Chew.ANIM_Pig_Chew;
+RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_GetHitFront.ANIM_Wolf_GetHitFront;
 RecentlyPlaced=/Game/AnimalVarietyPack/Fox/Animations/ANIM_Fox_GoToRest.ANIM_Fox_GoToRest;
 RecentlyPlaced=/Game/AnimalVarietyPack/Fox/Animations/ANIM_Fox_GetHitLeft.ANIM_Fox_GetHitLeft;
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Tree_Medium_01.SM_Tree_Medium_01;
@@ -1335,12 +1341,6 @@ RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Meshes/Rocks/SM_Rock_02.SM_Rock
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Plants/SM_Plant_Taro_02.SM_Plant_Taro_02;
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Palm_B_04.SM_Palm_B_04;
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Palm_A_02.SM_Palm_A_02;
-RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Palm_A_03.SM_Palm_A_03;
-RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Tree_Large_01.SM_Tree_Large_01;
-RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Tree_Medium_02.SM_Tree_Medium_02;
-RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_BananaTree_03.SM_BananaTree_03;
-RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Bushes/SM_Bush_Medium_01.SM_Bush_Medium_01;
-RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Flowers/SM_FlowerClump_B_01.SM_FlowerClump_B_01;
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
