--- a/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -190,7 +190,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/AnimalVarietyPack/Crow/Animations
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -205,8 +205,6 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Health.Health
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
@@ -735,12 +733,12 @@ RichTextBlock.Render Transform=True
 RichTextBlock.Performance=True
 RichTextBlock.Navigation=True
 RichTextBlock.Localization=True
-TextBlock.Layout=True
-TextBlock.Content=True
-TextBlock.Appearance=True
-TextBlock.Accessibility=True
+TextBlock.Layout=False
+TextBlock.Content=False
+TextBlock.Appearance=False
+TextBlock.Accessibility=False
 TextBlock.Performance=False
-TextBlock.Clipping=True
+TextBlock.Clipping=False
 TextBlock.Wrapping=True
 TextBlock.Behavior=True
 TextBlock.Render Transform=True
@@ -1169,6 +1167,35 @@ Health_C.Localization=True
 Health_C.Accessibility=True
 Health_C.Clipping=True
 Health_C.Navigation=True
+Overlay.Layout=True
+Overlay.Behavior=True
+Overlay.Accessibility=True
+Overlay.Render Transform=True
+Overlay.Performance=True
+Overlay.Clipping=True
+Overlay.Navigation=True
+Overlay.Localization=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+EditableTextBox.Layout=True
+EditableTextBox.Content=True
+EditableTextBox.Appearance=True
+EditableTextBox.Accessibility=True
+EditableTextBox.Behavior=True
+EditableTextBox.Clipping=True
+EditableTextBox.Render Transform=True
+EditableTextBox.Performance=True
+EditableTextBox.Navigation=True
+EditableTextBox.Localization=True
+EditableTextBox.Events=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1184,26 +1211,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem1=/Game/Health
-MRUItem2=/Game/LUSH_StylizedEnvironmentSet/_SharedAssets/T_Leaves_01
-MRUItem3=/Game/LevelPrototyping/Materials/M_PrototypeGrid
-MRUItem4=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
-MRUItem5=/Game/LevelPrototyping/Materials/M_Solid
-MRUItem6=/Game/LevelPrototyping/Materials/MI_Solid_Blue
-MRUItem7=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem8=/Game/Materials/_d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078
-MRUItem9=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
-MRUItem10=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonProjectile
-MRUItem11=/Game/StarterContent/Audio/Explosion01
-MRUItem12=/Game/StarterContent/Props/SM_Door
-MRUItem13=/Game/StarterContent/Props/SM_DoorFrame
-MRUItem14=/Game/Blueprints/Doors/bp_door_parents
-MRUItem15=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonCharacter
-MRUItem16=/Game/Blueprints/Doors/bpc_door_interface
-MRUItem17=/Game/Blueprints/FirstPersonTemplate/BPI_Interaction
-MRUItem18=/Game/Blueprints/Doors/bpc_door_interact
-MRUItem19=/Game/Blueprints/Doors/BP+Pressureplate
+MRUItem0=/Game/Damage
+MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem2=/Game/Health
+MRUItem3=/Game/LUSH_StylizedEnvironmentSet/_SharedAssets/T_Leaves_01
+MRUItem4=/Game/LevelPrototyping/Materials/M_PrototypeGrid
+MRUItem5=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
+MRUItem6=/Game/LevelPrototyping/Materials/M_Solid
+MRUItem7=/Game/LevelPrototyping/Materials/MI_Solid_Blue
+MRUItem8=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem9=/Game/Materials/_d_36854j_i_91gUd018svc1oehjcrzo1ib4_rtc078
+MRUItem10=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
+MRUItem11=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonProjectile
+MRUItem12=/Game/StarterContent/Audio/Explosion01
+MRUItem13=/Game/StarterContent/Props/SM_Door
+MRUItem14=/Game/StarterContent/Props/SM_DoorFrame
+MRUItem15=/Game/Blueprints/Doors/bp_door_parents
+MRUItem16=/Game/Blueprints/FirstPersonTemplate/BP_FirstPersonCharacter
+MRUItem17=/Game/Blueprints/Doors/bpc_door_interface
+MRUItem18=/Game/Blueprints/FirstPersonTemplate/BPI_Interaction
+MRUItem19=/Game/Blueprints/Doors/bpc_door_interact
 
 [DetailCategoriesAdvanced]
 SkeletalMeshComponent.Rendering=False
@@ -1227,7 +1254,7 @@ MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-Object=
+Object="\"Object.Render Transform.RenderTransformPivot\" "
 CharacterMovementComponent=
 PawnMovementComponent=
 NavMovementComponent=
@@ -1250,6 +1277,10 @@ PostProcessComponent=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
 StreamableRenderAsset=
 Health_C="\"Object.Render Transform.RenderTransformPivot\" "
+Overlay="\"Object.Render Transform.RenderTransformPivot\" "
+Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransformPivot\" "
+RichTextBlock="\"Object.Render Transform.RenderTransformPivot\" "
+EditableTextBox="\"Object.Render Transform.RenderTransformPivot\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
@@ -2525,7 +2556,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Crouching,InputSettings.Bindings.ActionMappings.interact
 PostProcessComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 K2Node_VariableGet=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
-BP_FirstPersonCharacter_C=PostProcessComponent.PostProcessVolume.Color Grading
+BP_FirstPersonCharacter_C=
 K2Node_VariableSet=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
 BrushComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
