--- a/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -205,6 +205,7 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
@@ -717,11 +718,11 @@ HorizontalBox.Layout=True
 CanvasPanel.Layout=True
 CanvasPanel.Behavior=False
 CanvasPanel.Accessibility=False
-CanvasPanel.Render Transform=True
-CanvasPanel.Performance=True
-CanvasPanel.Clipping=True
-CanvasPanel.Navigation=True
-CanvasPanel.Localization=True
+CanvasPanel.Render Transform=False
+CanvasPanel.Performance=False
+CanvasPanel.Clipping=False
+CanvasPanel.Navigation=False
+CanvasPanel.Localization=False
 RichTextBlock.Layout=True
 RichTextBlock.Content=True
 RichTextBlock.Appearance=True
@@ -733,28 +734,28 @@ RichTextBlock.Render Transform=True
 RichTextBlock.Performance=True
 RichTextBlock.Navigation=True
 RichTextBlock.Localization=True
-TextBlock.Layout=False
-TextBlock.Content=False
-TextBlock.Appearance=False
-TextBlock.Accessibility=False
-TextBlock.Performance=False
-TextBlock.Clipping=False
-TextBlock.Wrapping=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Clipping=True
+TextBlock.Wrapping=False
 TextBlock.Behavior=True
 TextBlock.Render Transform=True
 TextBlock.Navigation=True
 TextBlock.Localization=True
 ProgressBar.Layout=True
-ProgressBar.Style=True
+ProgressBar.Style=False
 ProgressBar.Progress=True
-ProgressBar.Accessibility=False
-ProgressBar.Appearance=True
-ProgressBar.Behavior=True
-ProgressBar.Render Transform=True
-ProgressBar.Performance=True
-ProgressBar.Clipping=True
-ProgressBar.Navigation=True
-ProgressBar.Localization=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=False
+ProgressBar.Behavior=False
+ProgressBar.Render Transform=False
+ProgressBar.Performance=False
+ProgressBar.Clipping=False
+ProgressBar.Navigation=False
+ProgressBar.Localization=False
 NewWidgetBlueprint_C.Layout=True
 BP_FirstPersonCharacter_C.Movement=True
 PropertyWrapper.Events=True
@@ -1196,6 +1197,40 @@ EditableTextBox.Performance=True
 EditableTextBox.Navigation=True
 EditableTextBox.Localization=True
 EditableTextBox.Events=True
+Damage_C.Appearance=True
+Damage_C.Input=True
+Damage_C.Interaction=True
+Damage_C.Designer=True
+Damage_C.Performance=True
+Damage_C.Layout=True
+Damage_C.Behavior=True
+Damage_C.Render Transform=True
+Damage_C.Localization=True
+Damage_C.Accessibility=True
+Damage_C.Clipping=True
+Damage_C.Navigation=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+PainCausingVolume.TransformCommon=True
+PainCausingVolume.PainCausingVolume=True
+PainCausingVolume.CharacterMovement=True
+PainCausingVolume.Volume=True
+PainCausingVolume.HLOD=True
+PainCausingVolume.Collision=True
+PainCausingVolume.BrushSettings=True
+PainCausingVolume.PathTracing=True
+PainCausingVolume.Navigation=True
+PainCausingVolume.Tags=True
+PainCausingVolume.Cooking=True
+PainCausingVolume.Replication=True
+PainCausingVolume.Networking=True
+PainCausingVolume.WorldPartition=True
+PainCausingVolume.Actor=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1211,8 +1246,8 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Damage
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/Damage
 MRUItem2=/Game/Health
 MRUItem3=/Game/LUSH_StylizedEnvironmentSet/_SharedAssets/T_Leaves_01
 MRUItem4=/Game/LevelPrototyping/Materials/M_PrototypeGrid
@@ -1246,6 +1281,10 @@ TextBlock.Clipping=False
 TextBlock.Performance=True
 CanvasPanel.Behavior=True
 bp_door_parents_C.Collision=True
+ProgressBar.Accessibility=False
+ProgressBar.Behavior=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
 
 [DetailPropertyExpansion]
 SkeletalMeshComponent=
@@ -1254,33 +1293,36 @@ MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-Object="\"Object.Render Transform.RenderTransformPivot\" "
+Object=
 CharacterMovementComponent=
 PawnMovementComponent=
 NavMovementComponent=
 MovementComponent=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" "
-TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransformPivot\" "
-TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object.Render Transform.RenderTransformPivot\" "
-Visual="\"Object.Render Transform.RenderTransformPivot\" "
-CanvasPanel="\"Object.Render Transform.RenderTransformPivot\" "
-PanelWidget="\"Object.Render Transform.RenderTransformPivot\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget=
+Visual=
+CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 HorizontalBox="\"Object.Render Transform.RenderTransformPivot\" "
 NewWidgetBlueprint_C=
-UserWidget="\"Object.Render Transform.RenderTransformPivot\" "
-ProgressBar="\"Object.Appearance.FillColorAndOpacity\" \"Object.Render Transform.RenderTransformPivot\" "
+UserWidget=
+ProgressBar="\"Object.Appearance.FillColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationMidtones\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationMidtones\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationMidtones\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessComponent=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
 StreamableRenderAsset=
 Health_C="\"Object.Render Transform.RenderTransformPivot\" "
-Overlay="\"Object.Render Transform.RenderTransformPivot\" "
-Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransformPivot\" "
-RichTextBlock="\"Object.Render Transform.RenderTransformPivot\" "
-EditableTextBox="\"Object.Render Transform.RenderTransformPivot\" "
+Overlay="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransformPivot\" "
+RichTextBlock="\"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransformPivot\" "
+EditableTextBox="\"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransformPivot\" "
+Damage_C=
+PainCausingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
@@ -1352,6 +1394,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PainCausingVolume;/Engine/Transient.ActorFactoryBoxVolume_18
 RecentlyPlaced=/Game/AnimalVarietyPack/Crow/Animations/ANIM_Crow_Fly.ANIM_Crow_Fly;
 RecentlyPlaced=/Game/AnimalVarietyPack/Crow/Animations/ANIM_Crow_Falling.ANIM_Crow_Falling;
 RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerDoe_GoToRest.ANIM_DeerDoe_GoToRest;
@@ -1371,7 +1414,6 @@ RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Meshes/Stones/SM_Stone_B_02.SM_
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Meshes/Rocks/SM_Rock_02.SM_Rock_02;
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Plants/SM_Plant_Taro_02.SM_Plant_Taro_02;
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Palm_B_04.SM_Palm_B_04;
-RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Palm_A_02.SM_Palm_A_02;
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2555,8 +2597,8 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Crouching,InputSettings.Bindings.ActionMappings.interact
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Crouching,InputSettings.Bindings.ActionMappings.interact
 PostProcessComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
-K2Node_VariableGet=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
-BP_FirstPersonCharacter_C=
+K2Node_VariableGet=PostProcessComponent.PostProcessVolume.Color Grading
+BP_FirstPersonCharacter_C=PostProcessComponent.PostProcessVolume.Color Grading
 K2Node_VariableSet=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
 BrushComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
@@ -2576,6 +2618,10 @@ MaterialInstanceConstant=
 CapsuleComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 EdGraphNode_Comment=PostProcessComponent.PostProcessVolume.Color Grading
 PropertyWrapper=PostProcessComponent.PostProcessVolume.Color Grading
+Damage_C=PostProcessComponent.PostProcessVolume.Color Grading
+K2Node_CustomEvent=PostProcessComponent.PostProcessVolume.Color Grading
+PainCausingVolume=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
+SkeletalMeshActor=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
