--- a/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1394,6 +1394,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PainCausingVolume;/Engine/Transient.ActorFactoryBoxVolume_18
 RecentlyPlaced=/Game/AnimalVarietyPack/Crow/Animations/ANIM_Crow_Fly.ANIM_Crow_Fly;
 RecentlyPlaced=/Game/AnimalVarietyPack/Crow/Animations/ANIM_Crow_Falling.ANIM_Crow_Falling;
@@ -1404,7 +1405,6 @@ RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_GetHitFront.ANI
 RecentlyPlaced=/Game/AnimalVarietyPack/Fox/Animations/ANIM_Fox_GoToRest.ANIM_Fox_GoToRest;
 RecentlyPlaced=/Game/AnimalVarietyPack/Fox/Animations/ANIM_Fox_GetHitLeft.ANIM_Fox_GetHitLeft;
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_Tree_Medium_01.SM_Tree_Medium_01;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Trees/SM_BananaTree_02.SM_BananaTree_02;
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/GroundIvy/SM_GroundIvy_01.SM_GroundIvy_01;
 RecentlyPlaced=/Game/LUSH_StylizedEnvironmentSet/Foliage/Grass/SM_Grass_Generic.SM_Grass_Generic;
@@ -2602,12 +2602,12 @@ BP_FirstPersonCharacter_C=PostProcessComponent.PostProcessVolume.Color Grading
 K2Node_VariableSet=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
 BrushComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
-bp_door_parents_C=PostProcessComponent.PostProcessVolume.Color Grading
+bp_door_parents_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 BP+Pressureplate_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
-SceneComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
+SceneComponent=
 StaticMeshActor=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 bpc_door_interact_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
-SkeletalMeshComponent=PostProcessComponent.PostProcessVolume.Color Grading
+SkeletalMeshComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 Emitter=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 Blueprint_CeilingLight_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 ParticleSystemComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
@@ -2622,6 +2622,8 @@ Damage_C=PostProcessComponent.PostProcessVolume.Color Grading
 K2Node_CustomEvent=PostProcessComponent.PostProcessVolume.Color Grading
 PainCausingVolume=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 SkeletalMeshActor=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
+BP_Pickup_Rifle_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
+PlayerStart=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
